# Tanu

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
bujji/: pyproject.toml
bujji/bujji/: __init__.py  agent.py  config.py  session.py
bujji/bujji/connections/: deskbot.py  display.py
bujji/bujji/tanu/: AGENT.md  HEARTBEAT.md  IDENTITY.md  SOUL.md  USER.md  __init__.py
bujji/bujji/tools/: __init__.py  gmail_oauth.py  gmail_scheduler.py  gmail_storage.py  tanu_email.py  tanu_query.py  tanu_reminder.py
src/tanu/: __init__.py  cli.py  config.py
src/tanu/plugins/voice/: deskbot.py
src/tanu/tools/: speak_tool.py  tanu_task.py
workspace/: AGENT.md  BACKSTORY.md  HEARTBEAT.md  IDENTITY.md  README.md  USER.bak  USER.md
workspace/tanu/: reminders.json  tasks.json
